# pytorch-sample

./: .gitignore  main.ipynb  pyproject.toml  readme.md  requirements.txt
